--- a/Master/Makefile
+++ b/Master/Makefile
@@ -1,5 +1,25 @@
+UNAME_S	:=	$(shell uname -s)
+
+ifeq ($(UNAME_S),Darwin)
+	CCFLAGS	+=	-D	OSX
+	CCFLAGS += -D_FILE_OFFSET_BITS = 64 -I/usr/local/include/osxfuse -L/usr/local/lib -lfuse -pthread
+sys:
+	@echo 'This is mac system'
+else
+	CCFLAGS += `pkg-config fuse --cflags --libs`
+sys:
+	@echo 'THIS IS LINUX'
+endif
+
+CC := gcc
 hello: hello.o
-	gcc -o hello hello.o `pkg-config fuse --cflags --libs`
+	$(CC) -o hello hello.o  $(CCFLAGS)
 
 hello.o: hello.c list.h
-	gcc -c -Wall hello.c `pkg-config fuse --cflags --libs`
+	$(CC) -c -Wall hello.c  $(CCFLAGS)
+
+clean:
+	rm *.o hello
+
+test:
+	@echo './hello ~/dev/tmp/cat -o defer_permissions'
