--- a/Master/Makefile
+++ b/Master/Makefile
@@ -12,14 +12,17 @@ sys:
 endif
 
 CC := gcc
-hello: hello.o md5.o
-	$(CC) -o hello hello.o md5.o $(CCFLAGS)
+hello: hello.o md5.o testdb.o
+	$(CC) -o hello hello.o md5.o testdb.o $(CCFLAGS)
 
-hello.o: hello.c list.h md5.h
+hello.o: hello.c list.h md5.h testdb.h
 	$(CC) -c -Wall hello.c  $(CCFLAGS)
 
 md5.o: md5.c md5.h
 	$(CC) -c -Wall md5.c
+
+testdb.o: testdb.c testdb.h
+	$(CC) -c -Wall testdb.c
 
 clean:
 	rm *.o hello
