CONFIG: resolve the conflict

--- a/Master/Makefile
+++ b/Master/Makefile
@@ -27,15 +27,16 @@ endif
 CC := gcc
 
 all:
-	echo $(OPTION)
+
 master: hello.o md5.o testdb.o filetransfer.o thread_server.o
-	$(CC) -o master hello.o md5.o testdb.o filetransfer.o thread_server.o $(CCFLAGS)  -lcurl
+	$(CC) -o master hello.o md5.o testdb.o filetransfer.o thread_server.o $(CCFLAGS)  -lcurl $(OPTION)
 
 replica: hello.o md5.o testdb.o filetransfer.o thread_server.o
-	$(CC) -o replica hello.o md5.o testdb.o filetransfer.o thread_server.o $(CCFLAGS)  -lcurl
+	echo $(OPTION)
+	$(CC) -o replica hello.o md5.o testdb.o filetransfer.o thread_server.o $(CCFLAGS)  -lcurl  $(OPTION)
 
-hello.o: hello.c list.h md5.h testdb.h filetransfer.h thread_server.h
-	$(CC) -c -Wall hello.c  $(CCFLAGS) -lcurl
+hello.o: hello.c list.h md5.h testdb.h filetransfer.h thread_server.h 
+	$(CC) -c -Wall hello.c  $(CCFLAGS) -lcurl  $(OPTION)
 
 md5.o: md5.c md5.h
 	$(CC) -c -Wall md5.c
@@ -44,13 +45,16 @@ testdb.o: testdb.c testdb.h
 	$(CC) -c -Wall testdb.c
 
 filetransfer.o: filetransfer.c filetransfer.h
-	$(CC) -c -Wall filetransfer.c -lcurl  $(CCFLAGS)
+	$(CC) -c -Wall filetransfer.c -lcurl  $(CCFLAGS)  $(OPTION)
 
 thread_server.o: thread_server.c thread_server.h
-	$(CC) -c -Wall thread_server.c  -lpthread  $(CCFLAGS)
+	$(CC) -c -Wall thread_server.c  -lpthread  $(CCFLAGS)  $(OPTION)
 
-clean:
-	rm *.o master replica
+mclean:
+	rm *.o master
+
+rclean:
+	rm *.o replica
 
 test:
 	@echo './hello ~/dev -d  -o nonempty'
